--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,11 +7,11 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/hmdp?useSSL=false&serverTimezone=UTC
     username: root
-    password: 123
+    password: cherry123
   redis:
-    host: 192.168.150.101
+    host: 192.168.1.123
     port: 6379
-    password: 123321
+    password: cherry
     lettuce:
       pool:
         max-active: 10
